[package]
name = "log_dsl"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version =  "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
zstd = "0.13.3"
